--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,18 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
+<div>
+  <form class="form login-form cone mt-5 hideCons">
+    <h2 class="text-left">Login</h2> 
+    <div class="form-group pack">
+      <input class="form-control" type="text" id="email-login" placeholder="Email"/>
+    </div>
+    <div class="form-group pack">
+      <input class="form-control" type="password" id="password-login" placeholder="Password"/>
+    </div>
+    <div class="form-group pack">
+      <button class="btn btn-primary btn-lg btn-block" type="submit">Sign In</button>
+    </div>
+  </form>
+  <p class="text-center small">Don't have an account? <a href="/signup" id="signUpPageBtn">Sign up here!</a></p>
 </div>
 
 <script src="./js/login.js"></script>
