--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,41 @@
-<!-- Loop over each object in the projects array -->
-{{#each lists as |list| }}
-<div class="row mb-4 list">
-  <div class="col-md-5">
 
-      {{user.name}}    
-  </div>
-  <div class="col-md-7">
-    <p>
+<!-- Navbar -->
+<div class="container containerNav mt-4">
+    <nav class="navbar navbar-expand-lg navbar-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <!-- when click on a <a> tag it refreshes the page and stops that-->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto">
+        
+        <li class="list active">
+          <a class="nav-link" href="javascript:void(0);" id="yourListBtn">Your list</a>
+        </li>
 
-    </p>
-  </div>
+        <li class="list">
+          <a class="nav-link" href="javascript:void(0);" id="newListBtn">New list</a>
+        </li>
+      </ul>
+    </div>
+    </nav>
 </div>
-{{/each}}
+<!-- Lists Container -->
+<div class="container mainCon mt-5 hideCons" id="yourList">
+
+    <div class="row listItem">
+        <div class="col-8">List - 1</div> <!--List Name-->
+        <div class="col-4 text-right"><button class="viewBtn btn btn-success">View</button></div>
+    </div>
+
+    <div class="row listItem">
+        <div class="col-8">List - 2</div> <!--List Name-->
+        <div class="col-4 text-right"><button class="viewBtn btn btn-success">View</button></div>
+    </div>
+
+    <div class="row listItem">
+        <div class="col-8">List - 3</div> <!--List Name-->
+        <div class="col-4 text-right"><button class="viewBtn btn btn-success">View</button></div>
+    </div>
+</div>
