tried to get functionalist working, not sure why not

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,21 @@
 
+
+<div class="row mb-4 list">
+  <div class="col-md-5">
+    <h2>
+      <a href="/list/{{list.id}}">{{list.name}}4</a>
+    </h2>
+    <p>Created by {{list.user.name}} </p>
+  </div>
+  <div class="col-md-7">
+    <p>
+      {{list.description}}
+    </p>
+  </div>
+</div>
+
+
+
 <!-- Navbar -->
 <div class="container containerNav mt-4">
     <nav class="navbar navbar-expand-lg navbar-light">
