--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,7 @@
 
       <nav class="form-control">
         <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
+        {{#if logged_in}} Welcome {{User.name}}| 
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
