--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,20 @@
 
+{{#if lists.length}}
+  <div class="col-md-6 list-list">
+    <h3>Current lists:</h3>
 
-<div class="row mb-4 list">
-  <div class="col-md-5">
-    <h2>
-      <a href="/list/{{list.id}}">{{list.name}}4</a>
-    </h2>
-    <p>Created by {{list.user.name}} </p>
+    {{#each lists as |list|}}
+    <div class="row mb-2">
+      <div class="col-md-8">
+        <h4><a href="/list/{{list.id}}">{{list.name}}</a></h4>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" data-id="{{list.id}}">DELETE</button>
+      </div>
+    </div>
+    {{/each}}
   </div>
-  <div class="col-md-7">
-    <p>
-      {{list.description}}
-    </p>
-  </div>
-</div>
+  {{/if}}
 
 
 
