--- a/views/addList.handlebars
+++ b/views/addList.handlebars
@@ -1,5 +1,3 @@
-
-<!-- Navbar -->
 <div class="container containerNav mt-4">
     <nav class="navbar navbar-expand-lg navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,36 +8,35 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto">
         
-        <li class="list active">
+        <li class="list">
           <a class="nav-link" href="/" id="yourListBtn">Your list</a>
         </li>
 
-        <li class="list">
+        <li class="list active">
           <a class="nav-link" href="/addList" id="newListBtn">New list</a>
         </li>
       </ul>
     </div>
     </nav>
 </div>
-    
-{{#if lists.length}}
-  <div class="col-md-12 list-list">
-  <div class="container mainCon mt-5 hideCons" id="yourList">
-    {{#each lists as |list|}}
-
-    <div class="row listItem">
-        <div class="col-8"><h4><a href="/list/{{list.id}}">{{list.name}}</a></h4></div> <!--List Name-->
-        <div class="col-4 text-right"><a href="/list/{{list.id}}" class="viewBtn btn btn-success">View</a>
-        <button class="btn btn-danger" data-id="{{list.id}}">DELETE</button>        
-        </div>
+ 
+ <div class="container mainCon mt-5 update-list-form" id="newList">
+    <div class="row">
+      <div class="col-auto">
+        <h2>Create a New List</h2><br>
+      </div>
     </div>
+    <form class="form new-list-form">
+      <div class="form-group">
+        <input class="form-control" type="text" id="list-name" name="list-name" placeholder="Title" />
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" id="list-desc" name="list-desc" placeholder="U-DO List" ></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-success btn-lg btn-block">Create</button>
+      </div>
+    </form>
+</div>
 
-
-    {{/each}}
-  </div>
-  </div>
-  {{/if}}
-
-  
-
-<script src="./js/homepage.js"></script>
+<script src="./js/list.js"></script>
