set foundation for adding a task

--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -20,10 +20,10 @@
     </nav>
 </div>
 
-<div class="container mainCon mt-5 update-list-form" id="newList">
+<div class="container mainCon mt-5" id="newList">
 
 
-  <form action="#" method="post">
+  <form id="update-list-form"action="#" method="post">
       <h2 class="text-left my-4">Update list</h2>   
       <div class="pack">
           <!-- Title box -->
@@ -33,6 +33,13 @@
       <div class="pack">
           <!-- List box -->
         <textarea type="text" class="form-control" id="list-desc" name="list" rows="11" placeholder="U-DO List" required="required">{{description}}</textarea>
+      </div>
+
+      <div>
+        <h3>Add a task</h3>
+        <input type="text" id="new-task" class="form-control" placeholder="New Task">
+        <button class="btn btn-success btn-lg btn-block" id="new-taskbtn">Add</button><br>
+
       </div>
 
       <div class="pack">
