adding task update btns to connect eventlistener

--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -60,3 +60,4 @@
 <br>
   <div><center>Created by {{user.name}} on {{format_date date_created}}</center></div><br>
 <script src="../js/listUpdate.js"></script>
+<script src="../js/taskLogic.js"></script>
