--- a/views/partials/task.handlebars
+++ b/views/partials/task.handlebars
@@ -7,5 +7,7 @@
 {{#if in_progress}}<h5>task in progress</h5>
      {{else}} <h5>task not in progress</h5>
      {{/if}}
-     
+     <button class= "toggle-complete" type="button">Marked as complete</button>
+     <button class= "toggle-progress" type="button">Marked as in progress</button>
+     <button class= "update-task-btn" type="button">Update task</button>
 </div>
