--- a/views/partials/task.handlebars
+++ b/views/partials/task.handlebars
@@ -1,6 +1,6 @@
 <div>
     {{!-- <h1> {{description}} </h1> --}}
-    <textarea class="form-control" name="taskDescription">{{description}}</textarea>
+    <textarea class="form-control" data-task_id="{{id}}"name="taskDescription">{{description}}</textarea>
      {{#if completed}}<h5>task completed</h5>
      {{else}} <h5>task NOT completed</h5>
      {{/if}}
@@ -8,7 +8,7 @@
 {{#if in_progress}}<h5>task in progress</h5>
      {{else}} <h5>task not in progress</h5>
      {{/if}}
-     <button class= "toggle-complete" type="button">Marked as complete</button>
-     <button class= "toggle-progress" type="button">Marked as in progress</button>
-     <button class= "update-task-btn" type="button">Update task</button>
+     <button data-task_id="{{id}}"class= "toggle-complete" type="button">Marked as complete</button>
+     <button data-task_id="{{id}}"class= "toggle-progress" type="button">Marked as in progress</button>
+     <button data-task_id="{{id}}"class= "update-task-btn" type="button">Update task</button>
 </div>
