--- a/views/partials/task.handlebars
+++ b/views/partials/task.handlebars
@@ -14,6 +14,11 @@
      {{else}}
 <button data-task_id="{{id}}"class= "toggle-complete" type="button">Mark as complete</button>
 {{/if}}
-     <button data-task_id="{{id}}"class= "toggle-progress" type="button">Marked as in progress</button>
+
+{{#if in_progress}}
+     <button data-task_id="{{id}}"class= "toggle-progress" type="button">Mark as NOT in progress</button>
+     {{else}}
+<button data-task_id="{{id}}"class= "toggle-progress" type="button">Mark as in progress</button>
+{{/if}}
      <button data-task_id="{{id}}"class= "update-task-btn" type="button">Update task</button>
 </div>
