--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -22,7 +22,7 @@
 
 <div class="container mainCon mt-5 update-list-form" id="newList">
 
-
+<div class="todolistcont">
   <form action="#" method="post">
       <h2 class="text-left my-4">Update list</h2>   
       <div class="pack">
@@ -38,8 +38,24 @@
           <!-- Save button box -->
       <div class="pack">
           <button type="submit" name="saveList" data-id="{{id}}" class="updateBtn btn btn-success btn-lg btn-block">Save</button><br>
+     
       </div>
   </form>
+</div>
+
+<div class="smsapi">
+  <form>
+   
+     <div class="sms">
+              <script src="./apistuff/sms2.js">SMS SENDER</script>     
+      <input type="text" name="Phone Number"/>
+      <input type="Submit">  Push Submit to send a text reminder to your phone! </input>
+
+      </div>
+
+  </form>
+
+  </div>
 
 
 </div>
