added new form  in html updated list.handlebars

--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -48,8 +48,9 @@
    
      <div class="sms">
               <script src="./apistuff/sms2.js">SMS SENDER</script>     
-      <input type="text" name="Phone Number"/>
-      <input type="Submit">  Push Submit to send a text reminder to your phone! </input>
+      <input id="phoneNumber" value="Phone Number" type="text"> </input>
+      <button id-"submit" onclick="sendText()"> Send Text!</button>
+      
 
       </div>
 
