--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -49,7 +49,7 @@
      <div class="sms">
               <script src="./apistuff/sms2.js">SMS SENDER</script>     
       <input id="phoneNumber" value="Phone Number" type="text"> </input>
-      <button id-"submit" onclick="sendText()"> Send Text!</button>
+      <button type="submit"> Send Text!</button>
       
 
       </div>
